# MyMediaTest

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mymediatest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/mymediatest/: MainActivity.kt
app/src/main/java/com/example/mymediatest/app/: TestApplication.kt
app/src/main/java/com/example/mymediatest/case/: CaseCollector.kt  CaseItem.kt  CasePageActivity.kt  CasePageData.kt  CaseSelectActivity.kt  CaseViewAdapter.kt  CaseViewFactory.kt  CaseViewHolder.kt
app/src/main/java/com/example/mymediatest/play/: CodecPlayerHelperController.kt  CodecPlayerHelperFactory.kt  ExoPlayerHelper.kt  MediaCodecPlayerHelper.kt  MediaCodecPlayerHelperFactory.kt  MediaPlayerHelper.kt  MediaPlayerHelperController.kt  MediaPlayerHelperFactory.kt
app/src/main/java/com/example/mymediatest/player/: BasePlayer.kt  BasePlayerHelper.kt  ExoPlayerHelper.kt  MediaPlayerHelper.kt  PlayerFragment.kt  PlayerProgressBar.kt  PlayerState.kt  PlayerSurfaceView.kt  PlayerTextureView.kt  PlayerVM.kt  VideoSurfaceView.kt  VideoTextureView.kt  VideoViewHelper.kt
app/src/main/java/com/example/mymediatest/select/: CaseCollector.kt  CasePageActivity.kt  CaseParamsFragment.kt  CaseSelectActivity.kt
app/src/main/java/com/example/mymediatest/test/: Test000ExoPlayer.kt  Test000MediaPlayer.kt  Test001VideoView.kt  Test002MediaPlayer.kt  Test002VideoSurfaceView.kt  Test003ExoPlayer.kt  Test003VideoTextureView.kt  Test004CodecPlayer.kt  Test004ExoPlayerView.kt  Test005ExoSurfaceView.kt  Test006ExoTextureView.kt
app/src/main/java/com/example/mymediatest/utils/: MediaUtils.kt  VideoViewHelper.kt
app/src/main/res/drawable/: player_idle.xml  player_load.xml  player_pause.xml  player_start.xml
app/src/main/res/layout/: base_player_fragment.xml  case_item_view.xml  case_page_activity.xml  case_params_fragment.xml  case_player_fragment.xml  case_player_progress_bar.xml  case_select_activity.xml  common_exo_player_view.xml  common_player_gl_surface_view.xml  common_player_gl_texture_view.xml  common_player_surface_view.xml  common_player_texture_view.xml  param_item__view.xml  params_option_item.xml  params_option_spinner.xml  test_001_video_view.xml  test_002_video_surface_view.xml  test_003_video_texture_view.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mymediatest/: ExampleUnitTest.kt
ffmpeg/: .gitignore  CMakeLists.txt  build.gradle.kts  compile.sh  config.sh
ffmpeg/src/androidTest/java/com/example/ffmpeg/: ExampleInstrumentedTest.kt
ffmpeg/src/main/cpp/: CMakeLists.txt  main.cc
ffmpeg/src/main/java/com/example/ffmpeg/: FFmpeg.kt  LibFFmpeg.kt
ffmpeg/src/test/java/com/example/ffmpeg/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
shared/: build.gradle.kts
shared/include/: util_base.h  util_defer.h  util_jni.h  util_jni_ref.h  util_string.h
shared/src/main/java/com/example/shared/app/: BaseApplication.kt
shared/src/main/java/com/example/shared/bean/: BaseProperties.kt  BundleProperties.kt  JsonProperties.kt  MapProperties.kt  MediaFormatProperties.kt  SharedPreferencesProperties.kt
shared/src/main/java/com/example/shared/list/: BaseViewAdapter.kt  BaseViewFactory.kt  BaseViewHolder.kt
shared/src/main/java/com/example/shared/page/: BaseActivity.kt  BaseFragment.kt
shared/src/main/java/com/example/shared/utils/: BeanUtils.kt  ChannelUtils.kt  CleanUtils.kt  Cleaner.kt  CollectionUtils.kt  ContextUtils.kt  CoroutineUtils.kt  LifecycleUtils.kt  LogUtils.kt  PackageUtils.kt  ReflectionUtils.kt  ResourcesUtils.kt  ServiceUtils.kt  StateUtils.kt  VecUtils.kt  (+4 more)
shared/src/main/res/values/: ids.xml
shared_include/: util_ctor.h  util_log.h
(+44 files in other folders)
